--- a/public/mycss.css
+++ b/public/mycss.css
@@ -27,10 +27,11 @@ main {
     /* margin-bottom: 30px; */
     gap: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-content: space-around;
     padding: 10px;
+    width: 100%;
 }
 
 * {
@@ -44,7 +45,7 @@ img {
 
 .images_group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 10px;
 }
 
@@ -65,3 +66,19 @@ footer {
     margin-top: 20px;
     max-width: 90%;
 }
+
+
+@media screen and (max-width: 750px) {
+    nav{
+        flex-direction: column;
+    }
+
+    .images_group {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+}
+
+
+
