--- a/public/mycss.css
+++ b/public/mycss.css
@@ -67,6 +67,29 @@ footer {
     max-width: 90%;
 }
 
+#button {
+    background-color: antiquewhite;
+}
+
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .warning {
+    border-color: #ff9800;
+    color: orange;
+  }
+
+  .warning:hover {
+    background: #ff9800;
+    color: white;
+  }
+
 
 @media screen and (max-width: 750px) {
     nav{
