--- a/public/mycss.css
+++ b/public/mycss.css
@@ -18,7 +18,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #92a8d1;
     padding: 14px 16px;
 }
