--- a/public/css/adminlogin.css
+++ b/public/css/adminlogin.css
@@ -28,8 +28,8 @@ body {
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
     padding-top: 20px;
     padding-bottom: 30px;
 }
@@ -43,14 +43,9 @@ header {
     padding-bottom: 20px;
 }
 
-
 .login {
     color: white;
-    background: #136a8a;
-    background:
-        -webkit-linear-gradient(to right, #267871, #136a8a);
-    background:
-        linear-gradient(to right, #267871, #136a8a);
+    background: #a83333;
     margin: auto;
     box-shadow:
         0px 2px 10px rgba(0, 0, 0, 0.2),
@@ -129,6 +124,11 @@ header {
     background-color: #f44336; /* Red */
     color: white;
     margin-bottom: 15px;
+  }
+
+  #lbutton {
+      display: flex;
+      justify-content: center;
   }
 
 @media only screen and (max-width: 1000px) {
